<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.athon.hack.parkit.RegisterActivity">

    xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"

    android:layout_height="match_parent"

    tools:context=".RegistrationFormActivity" >



    <LinearLayout

        android:layout_width="wrap_content"

        android:layout_height="wrap_content"

        android:layout_alignParentBottom="true"

        android:layout_alignParentLeft="true"

        android:layout_alignParentRight="true"

        android:layout_alignParentTop="true"

        android:orientation="vertical" >



        <TextView

            android:id="@+id/textView1"

            android:layout_width="wrap_content"

            android:layout_height="wrap_content"

            android:layout_gravity="center_horizontal"

            android:text="@string/RegistrationForm"

            android:textAppearance="?android:attr/textAppearanceLarge" />


        <TextView

            android:id="@+id/textView2"

            android:layout_width="wrap_content"

            android:layout_height="wrap_content"

            android:text="@string/UserName"

            android:textAppearance="?android:attr/textAppearanceMedium" />



        <EditText

            android:id="@+id/editText1"

            android:layout_width="match_parent"

            android:layout_height="wrap_content"

            android:ems="10"

            android:inputType="textVisiblePassword|textNoSuggestions" />

        <requestFocus />

        <TextView

            android:id="@+id/textView3"

            android:layout_width="wrap_content"

            android:layout_height="wrap_content"

            android:text="@string/Password"

            android:textAppearance="?android:attr/textAppearanceMedium" />



        <EditText

            android:id="@+id/editText2"

            android:layout_width="match_parent"

            android:layout_height="wrap_content"

            android:ems="10"

            android:inputType="textPassword" />


        <TextView

            android:id="@+id/textView4"

            android:layout_width="wrap_content"

            android:layout_height="wrap_content"

            android:text="@string/FirstName"

            android:textAppearance="?android:attr/textAppearanceMedium" />



        <EditText

            android:id="@+id/editText3"

            android:layout_width="match_parent"

            android:layout_height="wrap_content"

            android:ems="10"

            android:inputType="textPersonName" >

        </EditText>



        <TextView

            android:id="@+id/textView5"

            android:layout_width="wrap_content"

            android:layout_height="wrap_content"

            android:text="@string/LastName"

            android:textAppearance="?android:attr/textAppearanceMedium" />



        <EditText

            android:id="@+id/editText4"

            android:layout_width="match_parent"

            android:layout_height="wrap_content"

            android:ems="10"

            android:inputType="textPersonName" />



        <TextView

            android:id="@+id/textView6"

            android:layout_width="wrap_content"

            android:layout_height="wrap_content"

            android:text="@string/Email"

            android:textAppearance="?android:attr/textAppearanceMedium" />



        <EditText

            android:id="@+id/editText5"

            android:layout_width="match_parent"

            android:layout_height="wrap_content"

            android:ems="10"

            android:inputType="textEmailAddress" />


        <CheckBox

            android:id="@+id/checkBox1"

            android:layout_width="wrap_content"

            android:layout_height="wrap_content"

            android:selectAllOnFocus="false"

            android:text="@string/checkbox" />


        <TextView

            android:id="@+id/textView7"

            android:layout_width="wrap_content"

            android:layout_height="wrap_content"

            android:text="@string/ParkingZone"

            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/zones_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <Button

            android:id="@+id/button1"

            android:layout_width="wrap_content"

            android:layout_height="wrap_content"

            android:layout_gravity="center_horizontal"

            android:onClick="startsignup"

            android:text="@string/SignUp" />

    </LinearLayout>

</RelativeLayout>
